@@ -377,14 +377,24 @@ const PHP_ROUND_HALF_EVEN = UNKNOWN;
 const PHP_ROUND_HALF_ODD = UNKNOWN;
 /**
  * @var int
- * @cvalue PHP_ROUND_UP
+ * @cvalue PHP_ROUND_CEILING
  */
-const PHP_ROUND_UP = UNKNOWN;
+const PHP_ROUND_CEILING = UNKNOWN;
 /**
  * @var int
- * @cvalue PHP_ROUND_DOWN
+ * @cvalue PHP_ROUND_FLOOR
  */
-const PHP_ROUND_DOWN = UNKNOWN;
+const PHP_ROUND_FLOOR = UNKNOWN;
+/**
+ * @var int
+ * @cvalue PHP_ROUND_TOWARD_ZERO
+ */
+const PHP_ROUND_TOWARD_ZERO = UNKNOWN;
+/**
+ * @var int
+ * @cvalue PHP_ROUND_AWAY_FROM_ZERO
+ */
+const PHP_ROUND_AWAY_FROM_ZERO = UNKNOWN;
 
 /* crypt.c */
 
