@@ -114,12 +114,20 @@ PHPAPI zend_string * _php_math_zvaltobase(zval *arg, int base);
 #define PHP_ROUND_HALF_ODD       0x04
 #endif
 
-#ifndef PHP_ROUND_UP
-#define PHP_ROUND_UP       	     0x05
+#ifndef PHP_ROUND_CEILING
+#define PHP_ROUND_CEILING        0x05
 #endif
 
-#ifndef PHP_ROUND_DOWN
-#define PHP_ROUND_DOWN           0x06
+#ifndef PHP_ROUND_FLOOR
+#define PHP_ROUND_FLOOR          0x06
+#endif
+
+#ifndef PHP_ROUND_TOWARD_ZERO
+#define PHP_ROUND_TOWARD_ZERO    0x07
+#endif
+
+#ifndef PHP_ROUND_AWAY_FROM_ZERO
+#define PHP_ROUND_AWAY_FROM_ZERO 0x08
 #endif
 
 #endif /* PHP_MATH_H */
