@@ -6,26 +6,34 @@ var_dump (round (2.5, 0, PHP_ROUND_HALF_UP));
 var_dump (round (2.5, 0, PHP_ROUND_HALF_DOWN));
 var_dump (round (2.5, 0, PHP_ROUND_HALF_EVEN));
 var_dump (round (2.5, 0, PHP_ROUND_HALF_ODD));
-var_dump (round (2.5, 0, PHP_ROUND_UP));
-var_dump (round (2.5, 0, PHP_ROUND_DOWN));
+var_dump (round (2.5, 0, PHP_ROUND_CEILING));
+var_dump (round (2.5, 0, PHP_ROUND_FLOOR));
+var_dump (round (2.5, 0, PHP_ROUND_TOWARD_ZERO));
+var_dump (round (2.5, 0, PHP_ROUND_AWAY_FROM_ZERO));
 var_dump (round (-2.5, 0, PHP_ROUND_HALF_UP));
 var_dump (round (-2.5, 0, PHP_ROUND_HALF_DOWN));
 var_dump (round (-2.5, 0, PHP_ROUND_HALF_EVEN));
 var_dump (round (-2.5, 0, PHP_ROUND_HALF_ODD));
-var_dump (round (-2.5, 0, PHP_ROUND_UP));
-var_dump (round (-2.5, 0, PHP_ROUND_DOWN));
+var_dump (round (-2.5, 0, PHP_ROUND_CEILING));
+var_dump (round (-2.5, 0, PHP_ROUND_FLOOR));
+var_dump (round (-2.5, 0, PHP_ROUND_TOWARD_ZERO));
+var_dump (round (-2.5, 0, PHP_ROUND_AWAY_FROM_ZERO));
 var_dump (round (3.5, 0, PHP_ROUND_HALF_UP));
 var_dump (round (3.5, 0, PHP_ROUND_HALF_DOWN));
 var_dump (round (3.5, 0, PHP_ROUND_HALF_EVEN));
 var_dump (round (3.5, 0, PHP_ROUND_HALF_ODD));
-var_dump (round (3.5, 0, PHP_ROUND_UP));
-var_dump (round (3.5, 0, PHP_ROUND_DOWN));
+var_dump (round (3.5, 0, PHP_ROUND_CEILING));
+var_dump (round (3.5, 0, PHP_ROUND_FLOOR));
+var_dump (round (3.5, 0, PHP_ROUND_TOWARD_ZERO));
+var_dump (round (3.5, 0, PHP_ROUND_AWAY_FROM_ZERO));
 var_dump (round (-3.5, 0, PHP_ROUND_HALF_UP));
 var_dump (round (-3.5, 0, PHP_ROUND_HALF_DOWN));
 var_dump (round (-3.5, 0, PHP_ROUND_HALF_EVEN));
 var_dump (round (-3.5, 0, PHP_ROUND_HALF_ODD));
-var_dump (round (-3.5, 0, PHP_ROUND_UP));
-var_dump (round (-3.5, 0, PHP_ROUND_DOWN));
+var_dump (round (-3.5, 0, PHP_ROUND_CEILING));
+var_dump (round (-3.5, 0, PHP_ROUND_FLOOR));
+var_dump (round (-3.5, 0, PHP_ROUND_TOWARD_ZERO));
+var_dump (round (-3.5, 0, PHP_ROUND_AWAY_FROM_ZERO));
 ?>
 --EXPECT--
 float(3)
@@ -34,8 +42,12 @@ float(2)
 float(3)
 float(3)
 float(2)
+float(2)
+float(3)
 float(-3)
 float(-2)
+float(-2)
+float(-3)
 float(-2)
 float(-3)
 float(-2)
@@ -46,9 +58,13 @@ float(4)
 float(3)
 float(4)
 float(3)
+float(3)
+float(4)
 float(-4)
 float(-3)
 float(-4)
 float(-3)
+float(-3)
+float(-4)
 float(-3)
 float(-4)
